--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
   <script src="./src/assets/js/ScrollTrigger.js"></script>
   <script src="./src/assets/js/SplitText.js"></script>
   <script src="./src/assets/js/script.js"></script>
+  
+  <!-- jsPDF for PDF generation -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
 
 </body>
 
