--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -25,22 +24,22 @@
   
   <!-- CSS files -->
 
-  <link rel="stylesheet" href="./src/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./src/assets/css/animate.min.css">
-  <link rel="stylesheet" href="./src/assets/css/custom-animate.css">
-  <link rel="stylesheet" href="./src/assets/css/swiper.min.css">
-  <link rel="stylesheet" href="./src/assets/css/font-awesome-all.css">
-  <link rel="stylesheet" href="./src/assets/css/jarallax.css">
-  <link rel="stylesheet" href="./src/assets/css/jquery.magnific-popup.css">
-  <link rel="stylesheet" href="./src/assets/css/flaticon.css">
-  <link rel="stylesheet" href="./src/assets/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="./src/assets/css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="./src/assets/css/nice-select.css">
-  <link rel="stylesheet" href="./src/assets/css/jquery-ui.css">
-  <link rel="stylesheet" href="./src/assets/css/aos.css">
-  <link rel="stylesheet" href="./src/assets/css/odometer.min.css">
-   <link rel="stylesheet" href="./src/assets/css/style.css">
-  <link rel="stylesheet" href="./src/assets/css/responsive.css">
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/animate.min.css">
+  <link rel="stylesheet" href="/assets/css/custom-animate.css">
+  <link rel="stylesheet" href="/assets/css/swiper.min.css">
+  <link rel="stylesheet" href="/assets/css/font-awesome-all.css">
+  <link rel="stylesheet" href="/assets/css/jarallax.css">
+  <link rel="stylesheet" href="/assets/css/jquery.magnific-popup.css">
+  <link rel="stylesheet" href="/assets/css/flaticon.css">
+  <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="/assets/css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="/assets/css/nice-select.css">
+  <link rel="stylesheet" href="/assets/css/jquery-ui.css">
+  <link rel="stylesheet" href="/assets/css/aos.css">
+  <link rel="stylesheet" href="/assets/css/odometer.min.css">
+   <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/responsive.css">
 </head>
 
 <body class="custom-cursor" data-aos-easing="ease" data-aos-duration="1200" data-aos-delay="0" cz-shortcut-listen="true">
@@ -61,34 +60,34 @@
   <script type="module" src="/src/main.js"></script>
   
   <!-- jQuery and plugins -->
-  <script src="./src/assets/js/jquery-latest.js"></script>
-  <script src="./src/assets/js/bootstrap.bundle.min.js"></script>
-  <script src="./src/assets/js/jarallax.min.js"></script>
-  <script src="./src/assets/js/jquery.ajaxchimp.min.js"></script>
-  <script src="./src/assets/js/jquery.appear.min.js"></script>
-  <script src="./src/assets/js/swiper.min.js"></script>
-  <script src="./src/assets/js/jquery.magnific-popup.min.js"></script>
-  <script src="./src/assets/js/jquery.validate.min.js"></script>
-  <script src="./src/assets/js/wNumb.min.js"></script>
-  <script src="./src/assets/js/wow.js"></script>
-  <script src="./src/assets/js/isotope.js"></script>
-  <script src="./src/assets/js/owl.carousel.min.js"></script>
-  <script src="./src/assets/js/jquery-ui.js"></script>
-  <script src="./src/assets/js/jquery.nice-select.min.js"></script>
-  <script src="./src/assets/js/marquee.min.js"></script>
-  <script src="./src/assets/js/countdown.min.js"></script>
-  <script src="./src/assets/js/gsap.js"></script>
-  <script src="./src/assets/js/jquery.circleType.js"></script>
-  <script src="./src/assets/js/jquery.fittext.js"></script>
-  <script src="./src/assets/js/jquery.lettering.min.js"></script>
-  <script src="./src/assets/js/jquery-sidebar-content.js"></script>
-  <script src="./src/assets/js/aos.js"></script>
-  <script src="./src/assets/js/odometer.min.js"></script>
-  <script src="./src/assets/js/typed-2.0.11.js"></script>
-  <script src="./src/assets/js/jquery.circle-progress.min.js"></script>
-  <script src="./src/assets/js/ScrollTrigger.js"></script>
-  <script src="./src/assets/js/SplitText.js"></script>
-  <script src="./src/assets/js/script.js"></script>
+  <script src="/assets/js/jquery-latest.js"></script>
+  <script src="/assets/js/bootstrap.bundle.min.js"></script>
+  <script src="/assets/js/jarallax.min.js"></script>
+  <script src="/assets/js/jquery.ajaxchimp.min.js"></script>
+  <script src="/assets/js/jquery.appear.min.js"></script>
+  <script src="/assets/js/swiper.min.js"></script>
+  <script src="/assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="/assets/js/jquery.validate.min.js"></script>
+  <script src="/assets/js/wNumb.min.js"></script>
+  <script src="/assets/js/wow.js"></script>
+  <script src="/assets/js/isotope.js"></script>
+  <script src="/assets/js/owl.carousel.min.js"></script>
+  <script src="/assets/js/jquery-ui.js"></script>
+  <script src="/assets/js/jquery.nice-select.min.js"></script>
+  <script src="/assets/js/marquee.min.js"></script>
+  <script src="/assets/js/countdown.min.js"></script>
+  <script src="/assets/js/gsap.js"></script>
+  <script src="/assets/js/jquery.circleType.js"></script>
+  <script src="/assets/js/jquery.fittext.js"></script>
+  <script src="/assets/js/jquery.lettering.min.js"></script>
+  <script src="/assets/js/jquery-sidebar-content.js"></script>
+  <script src="/assets/js/aos.js"></script>
+  <script src="/assets/js/odometer.min.js"></script>
+  <script src="/assets/js/typed-2.0.11.js"></script>
+  <script src="/assets/js/jquery.circle-progress.min.js"></script>
+  <script src="/assets/js/ScrollTrigger.js"></script>
+  <script src="/assets/js/SplitText.js"></script>
+  <script src="/assets/js/script.js"></script>
   
   <!-- jsPDF for PDF generation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
