--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Home One || Tanspot || Tanspot Vue Template</title>
   <!-- favicons Icons -->
   <link rel="apple-touch-icon" sizes="180x180"
-    href="https://dreamlayout.mnsithub.com/php/tanspotphp/assets/images/favicons/apple-touch-icon.png">
+    href="/assets/img/west-east-freight-meta-tag.png">
   <link rel="icon" type="image/png" sizes="32x32"
-    href="https://dreamlayout.mnsithub.com/php/tanspotphp/assets/images/favicons/favicon-32x32.png">
+    href="/assets/img/west-east-freight-meta-tag.png">
   <link rel="icon" type="image/png" sizes="16x16"
-    href="https://dreamlayout.mnsithub.com/php/tanspotphp/assets/images/favicons/favicon-16x16.png">
+    href="/assets/img/west-east-freight-meta-tag.png">
   <meta name="description" content="Tanspot Vue 3 Template">
 
   <!-- fonts -->
