google analysics setup

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
     gtag('config', 'G-ZQ45NFFVM4');
   </script>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="436c6155-351d-44de-837b-ed9399448acf" type="text/javascript" async></script>
 </body>
 
 </html>
